# sigslots.cc

./: CMakeLists.txt  README.md
include/: sigslot.tpp
test/: example.cc
