cmake_minimum_required(VERSION 3.4)
set(CXX_STANDARD_REQUIRED 20)
set(CMAKE_CXX_FLAGS "-std=c++20 -fcoroutines")
project(sigslot)
include_directories(${CMAKE_SOURCE_DIR}/include/)
option(TESTS "Tests are disabled are default" ON)
if(TESTS)
    add_executable(testexample ${CMAKE_SOURCE_DIR}/test/example.cc)
endif(TESTS)